fix: Avatar member info alignment

--- a/src/Avatar/_avatar.scss
+++ b/src/Avatar/_avatar.scss
@@ -108,7 +108,6 @@
   .member-info {
     display: flex;
     flex-direction: column;
-    align-items: center;
     justify-content: center;
     margin-left: 5px;
     overflow: hidden;
